--- a/requirements.txt
+++ b/requirements.txt
@@ -1,109 +1,7 @@
-annotated-types==0.7.0
-anyio==4.9.0
-appdirs==1.4.4
-argcomplete==3.6.2
-attrs==25.1.0
-Beaker==1.12.1
-beautifulsoup4==4.13.4
-boto3==1.38.33
-botocore==1.38.33
-Brlapi==0.8.6
-Brotli==1.1.0
-cachetools==5.5.2
-certifi==2025.4.26
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.7
-cryptography==44.0.0
-cssselect==1.2.0
-cupshelpers==1.0
-dbus-python==1.3.2
-distro==1.9.0
-dnf==4.23.0
-fedora-third-party==0.10
-file-magic==0.4.0
-fros==1.1
-google-auth==2.40.3
-google-genai==1.20.0
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-humanize==4.12.0
-idna==3.10
-inkex==1.4.0
-jmespath==1.0.1
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-langtable==0.0.68
-libcomps==0.1.21
-libdnf==0.74.0
-louis==3.33.0
-lxml==5.3.2
-Mako==1.2.3
+blinker==1.9.0
+click==8.2.1
+Flask==3.1.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
 MarkupSafe==3.0.2
-mutagen==1.47.0
-nftables==0.1
-numpy==2.2.6
-olefile==0.47
-packaging==24.2
-Paste==3.10.1
-perf==0.1
-pexpect==4.9.0
-pillow==11.1.0
-pipx==1.7.1
-platformdirs==4.2.2
-ply==3.11
-ptyprocess==0.7.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycairo==1.25.1
-pycparser==2.20
-pycrypto==2.6.1
-pycryptodome==3.23.0
-pycryptodomex==3.21.0
-pycups==2.0.4
-pydantic==2.11.5
-pydantic_core==2.33.2
-pyenchant==3.2.2
-PyGObject==3.50.0
-pyinotify==0.9.6
-pyOpenSSL==25.0.0
-pyparsing==3.1.2
-pyserial==3.5
-PySocks==1.7.1
-python-augeas==1.1.0
-python-dateutil==2.8.2
-python-linux-procfs==0.7.3
-python-pam==2.0.2
-pyudev==0.24.3
-pyxdg==0.27
-PyYAML==6.0.2
-pyynl @ file:///builddir/build/BUILD/kernel-6.14.9-build/kernel-6.14.9/linux-6.14.9-300.fc42.x86_64/tools/net/ynl
-RapidFuzz==3.11.0
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.3
-rpds-py==0.25.0
-rpm==4.20.1
-rsa==4.9.1
-s3transfer==0.13.0
-scour==0.38.2
-selinux @ file:///builddir/build/BUILD/libselinux-3.8-build/libselinux-3.8/src
-sepolicy @ file:///builddir/build/BUILD/policycoreutils-3.8-build/selinux-3.8/python/sepolicy
-setools==4.5.1
-setuptools==74.1.3
-simpleaudio==1.0.4
-six==1.17.0
-sniffio==1.3.1
-sos==4.9.1
-soupsieve==2.7
-systemd-python==235
-tinycss2==1.4.0
-typing-inspection==0.4.1
-typing_extensions==4.12.2
-ufw==0.35
-urllib3==2.3.0
-userpath==1.9.2
-webencodings==0.5.1
-websockets==15.0.1
-yt-dlp==2025.5.22
+Werkzeug==3.1.3
